# RCProtocol

./: .gitignore  README.md
.ai/roles/: B端治理产品官宪法.md  NFC-标签安全官宪法.md  README.md  全栈集成官宪法.md  协议实现官宪法.md  基础宪章.md  文档总编-SSOT守门员宪法.md  超级代码审计员宪法.md  超级架构师宪法.md  超级运维与安全官宪法.md  首席增长官宪法.md  首席数据分析师宪法.md  首席编码机器宪法.md  首席自动化测试工程师宪法.md  首席视觉与交互设计师宪法.md  首席需求杠精宪法.md  高级产品经理宪法.md
docs/: Spec 分拆方案.md  frontend-audit-report.md  index.md  refactoring-plan.md  roadmap.md  seed-data-analysis.md  seed-data-and-test-accounts.md  前端联调验收矩阵.md  前端闭口任务拆解.plan.md
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tools.json  vitest.config.ts
rust/: Cargo.toml
rust/rc-api/: Cargo.toml
rust/rc-api/examples/: generate_jwt.rs  verify_jwt.rs
rust/rc-api/migrations/: 20250101000000_init_brands_products.sql  20250101000001_init_batches_sessions.sql  20250101000002_init_assets.sql  20250101000003_init_audit_events.sql  20250101000004_init_idempotency.sql  20250101000005_init_indexes.sql  20250101000006_add_owner_id.sql  20250101000007_add_verification_columns.sql  20250101000008_create_verification_events.sql  20250101000009_add_updated_at_brands_products.sql  20250101000010_add_enum_constraints.sql  20250101000011_fix_idempotency_pk.sql  20250101000012_brand_simplify_and_api_key.sql  20250101000013_asset_external_sku_mapping.sql  20250101000014_authority_devices.sql  20250101000015_asset_entanglements.sql  20250101000016_asset_transfers.sql  20250101000017_add_batch_id_to_assets.sql  20250101000018_add_missing_asset_columns.sql  20250101000019_create_asset_state_events.sql  20250101000020_create_approval_records.sql  20250101000021_add_prefixed_id_constraints.sql  20250101000022_finalize_brand_registration.sql  20250101000023_finalize_protocol_foundation.sql  20250101000024_create_asset_commitments.sql  20250101000025_add_asset_commitment_id_to_assets.sql  20250101000026_create_brand_attestations.sql  20250101000028_create_platform_attestations.sql  20250101000029_extend_verification_events_for_v2.sql
rust/rc-api/src/: app.rs  asset_commitment.rs  attestation_brand.rs  attestation_platform.rs  db.rs  lib.rs  main.rs  seed.rs
rust/rc-api/src/auth/: api_key.rs  authorization.rs  claims.rs  extractor.rs  jwt.rs  middleware.rs  mod.rs
rust/rc-api/src/cache/: ctr_cache.rs  mod.rs  wallet_snapshot.rs
rust/rc-api/src/cli/: ctr_calibrate.rs  mod.rs  wallet_snapshot_cli.rs
rust/rc-api/src/db/: asset_commitments.rs  assets.rs  authority_devices.rs  batches.rs  brand_attestations.rs  brands.rs  entanglements.rs  mod.rs  platform_attestations.rs  products.rs  transfers.rs  verification.rs
rust/rc-api/src/routes/: assets.rs  authority_devices.rs  batch.rs  brand.rs  health.rs  mod.rs  protocol.rs  transfer.rs  verify.rs
rust/rc-api/src/webhooks/: mod.rs
rust/rc-api/tests/: activation_integration.rs  authorization_integration.rs  brand_registration_integration.rs  external_contract_integration.rs  failure_extreme_integration.rs  failure_flow_integration.rs  protocol_write_flow_integration.rs  terminal_and_risk_flow_integration.rs  transfer_actions_integration.rs  transfer_integration.rs  verify_integration.rs
rust/rc-common/: Cargo.toml
rust/rc-common/src/: audit.rs  errors.rs  ids.rs  lib.rs  types.rs
rust/rc-core/: Cargo.toml
rust/rc-core/src/: bug_condition_test.rs  lib.rs  permissions.rs  preservation_test.rs  protocol.rs  state_machine.rs
rust/rc-crypto/: Cargo.toml
rust/rc-crypto/src/: cmac_aes128.rs  constant_time.rs  hmac_sha256.rs  kdf.rs  lib.rs  secret_key.rs  sun.rs
rust/rc-kms/: Cargo.toml
rust/rc-kms/src/: error.rs  lib.rs  provider.rs  root_key.rs  software_kms.rs
rust/rc-test-helpers/: Cargo.toml
rust/rc-test-helpers/src/: fixtures.rs  lib.rs  test_db.rs
rust/rc-test-helpers/tests/: integration.rs
scripts/: .gitkeep  check_state_enum_sync.sh  demo-transfer-flow.ps1  demo-transfer-flow.sh  generate-platform-token.sh  local-main-chain.ps1  local-reset-and-assert.ps1  stage5-brand-api-flow.ps1  stage5-brand-api-flow.sh  stage5-error-matrix.ps1  stage5-error-matrix.sh  stage5-main-chain.ps1  stage5-main-chain.sh  stage5-perf-baseline.ps1  stage5-perf-baseline.sh  stage5-verify-compare.ps1  stage5-verify-compare.sh  start-api.ps1  start-api.sh  test-activation.sh  test-batch.sh  test-brand-registration.ps1  test-brand-registration.sh  test-transfer.sh  test-verify-v2.ps1  test-verify-v2.sh
(+387 files in other folders)
