[workspace]
members = [
  "rc-common",
  "rc-core",
  "rc-crypto",
  "rc-kms",
  "rc-api",
  "rc-test-helpers"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
authors = ["RCProtocol"]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
cmac = "0.7"
aes = "0.8"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serial_test = "3"
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "9"
nanoid = "0.4"
rand = "0.8"
ulid = "1"
ed25519-dalek = "2"
