[package]
name = "rc-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
cmac = { workspace = true }
aes = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = "1"
