[package]
name = "rc-kms"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rc-crypto = { path = "../rc-crypto" }
zeroize = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
