[package]
name = "rc-test-helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rc-common = { path = "../rc-common" }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
